# Projekt-2025-Bui

./: Attendance_log.cpp  Attendance_log.h  CMakeLists.txt  DataFetch.cpp  DataFetch.h  Employee.h  README.md  adminmenu.cpp  adminmenu.h  att_record.h  attendance.db  attendance.sql  main.cpp
Client/: Attendance_log.h  CMakeLists.txt  DataFetch.h  README.md  ServerClient.h  adminmenu.h  attendance.db  main.cpp
Client/data/: Attendance_log.cpp  ServerClient.cpp
Dochazkovy_system/: CMakeLists.txt  database_init.sql  employees.sql  main.cpp
data/: Attendance_log.cpp  DataFetch.cpp  ServerClient.cpp  adminmenu.cpp
server/: CMakeLists.txt  attendance_server.db  run server  server.cpp
